Правки по валидации
